# sand-simulation-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile_commands.json  main.cpp  texture_tools.cpp
lib/: common.h  texture_tools.h
src/: GUIManager.cpp  RenderClient.cpp  SimulationManager.cpp  algorithm.cpp  main.cpp  simulation_manager.cpp
src/lib/: GUIManager.h  RenderClient.h  SimulationManager.h  algorithm.h  common.h  simulation_manager.h  texture_tools.h
tools/: build.py
